Resolves: tdf#145580 need to use gtk_im_context_filter_keypress

for at least xim, ibus works fine. To reproduce under Fedora with gtk3
can use a keyboard layout of "US International with dead keys" with
export GDK_BACKEND=x11
export GTK_IM_MODULE=xim

and 'a in writer comment or calc header/footer dialog

Change-Id: I49425887dccc23c4fadf2bc007b6e83fc7993f7a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130775
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>